--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -23,4 +23,5 @@ jobs:
         gem build *.gemspec
         gem push *.gem
       env:
+        GEM_VERSION: ${{ vars.GITHUB_REF_NAME }}
         GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
